<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_reviews"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/reviews" />
    <item
        android:id="@+id/nav_courses_group"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/courses">
        <menu>
            <item
                android:id="@+id/nav_course_java"
                android:title="Java" />
            <item
                android:id="@+id/nav_course_kotlin"
                android:title="Kotlin" />
            <item
                android:id="@+id/nav_course_python"
                android:title="Python" />
            <item
                android:id="@+id/nav_course_1c"
                android:title="1C" />
            <item
                android:id="@+id/nav_course_cpp"
                android:title="C++" />
            <item
                android:id="@+id/nav_course_csharp"
                android:title="C#" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Задачи" />
    <item
        android:id="@+id/nav_tests"
        android:icon="@android:drawable/ic_menu_help"
        android:title="Проверка и тесты" />
    <item
        android:id="@+id/nav_donate"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/donate" />
</menu>
